nullaway_error_0A44F26B-6147-4AA9-8732-A30C6A4A3E34.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-webflux/src/main/java/org/springframework/web/reactive/socket/adapter/StandardWebSocketHandlerAdapter.java:74: error: [NullAway] dereferenced expression this.delegateSession is @Nullable
			this.delegateSession.handleMessage(webSocketMessage.getType(), webSocketMessage);
			                    ^
    (see http://t.uber.com/nullaway )
